--- a/style.css
+++ b/style.css
@@ -42,3 +42,38 @@
 .italic{
     font-style: italic;
 }
+
+
+/*Внешние шрифты*/
+@font-face {
+    font-family: 'Roboto';
+    src: url("http://fonts.gstatic.com/s/roboto/v15/mErvLBYg_cXG3rLvUsKT_fesZW2xOQ-xsNqO47m55DA.woff2");
+}
+
+.outside_fonts a{
+    font-family: Arial;
+    color: white;
+    background-color: #1A5D64;
+    border-radius: 3px;
+}
+
+@font-face{
+    font-family: 'FontAwesome';
+    src: url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/fonts/fontawesome-webfont.eot');
+    src: url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/fonts/fontawesome-webfont.woff2') format('woff2'),
+         url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/fonts/fontawesome-webfont.woff') format('woff'),
+         url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/fonts/fontawesome-webfont.ttf') format('truetype'),
+         url('https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/fonts/fontawesome-webfont.svg') format('svg');
+}
+
+/*Разные версии шрифта Roboto*/
+@font-face {
+    font-family: 'Roboto';
+    src: url("fonts/Roboto-Italic.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+.Download_font p{
+    font-family: Roboto;
+}
