--- a/style.css
+++ b/style.css
@@ -77,3 +77,12 @@
 .Download_font p{
     font-family: Roboto;
 }
+
+/*Высота шрифта*/
+.font_size {
+    font-size: 10px;
+}
+.font_size > p{
+    font-size: 150%;
+}
+
