--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
     color: white;
     background-color: #1A5D64;
     border-radius: 3px;
+    text-decoration: none;
 }
 
 @font-face{
@@ -86,3 +87,76 @@
     font-size: 150%;
 }
 
+
+/*Форматирование текста*/
+    div.text_transform {
+        width: 350px;
+        height: 150px;
+        border-radius: 5px;
+        border: solid 2px;
+        background-color: rgba(160, 153, 173, .3);
+        margin: 5px;
+        padding: 2px;
+    }
+    p.lowercase{
+        text-transform: lowercase;
+    }
+    p.uppercase{
+        text-transform: uppercase;
+    }
+    p.capotalize{
+        text-transform: capitalize;
+    }
+div.text_decoration {
+    width: 350px;
+    border-radius: 5px;
+    border: solid 2px;
+    background-color: rgba(160, 153, 173, .3);
+    margin: 5px;
+    padding: 2px;
+}
+    p.under{
+        text-decoration: underline;
+    }
+    p.over{
+        text-decoration: overline;
+    }
+    p.line{
+        text-decoration: underline line-through;
+    }
+    a.none{
+        text-decoration: none;
+    }
+
+div.spacing {
+    width: 350px;
+    border-radius: 5px;
+    border: solid 2px;
+    background-color: rgba(160, 153, 173, .3);
+    margin: 5px;
+    padding: 2px;
+    padding-bottom: 10px;
+}
+p.smallLetterSpace{
+    letter-spacing: -1px;
+}
+p.bigLetterSpace{
+letter-spacing: 1px;
+}
+p.smallWordSpace{
+    word-spacing: -1px;
+}
+p.bigWordSpace{
+    word-spacing: 1px;
+}
+div.text_shadow{
+    width: 350px;
+    border: solid 2px #1A5D64;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 5px;
+}
+.text_shadow h1{
+    text-shadow: -5px -4px 3px #999;
+    text-align: center;
+}
