--- a/style.css
+++ b/style.css
@@ -201,3 +201,64 @@ p.text_indent{
     text-indent: 35px;
 }
 
+/*Стилизация списков*/
+.list_style_type{
+    width: 400px;
+    border: solid 2px #1A5D64;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 2px;
+}
+.disc{
+    list-style-type: disc;
+}
+.circle{
+    list-style-type: circle;
+}
+.square{
+    list-style-type: square;
+}
+.decimal{
+    list-style-type: decimal;
+}
+.decimal-leading-zero{
+    list-style-type: decimal-leading-zero;
+}
+.lower-roman{
+    list-style-type: lower-roman;
+}
+.upper-roman{
+    list-style-type: upper-roman;
+}
+.lower-alpha{
+    list-style-type: lower-alpha;
+}
+.upper-alpha{
+    list-style-type: upper-alpha;
+}
+
+.list_style_position{
+    width: 400px;
+    border: solid 2px #1A5D64;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 2px;
+}
+ul.outside{
+    list-style-position: outside;
+}
+ul.inside{
+    list-style-position: inside;
+}
+
+div.list_style_image{
+    width: 400px;
+    border: solid 2px #1A5D64;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 2px;
+}
+ul.list_style_image{
+    list-style-image: url("image/iphone.JPG");
+
+}
