--- a/style.css
+++ b/style.css
@@ -317,3 +317,19 @@ div.Table_styling{
     margin-bottom: 15px;
     margin-left: 20px;
 }
+.outer{
+    margin: 25px;
+    padding-top: 30px;
+    padding-right: 25px;
+    padding-bottom: 35px;
+    padding-left: 28px;
+    border: solid 2px red;
+    border-radius: 5px;
+    background-color: #1A5D64;
+    opacity: 50%;
+}
+.inner{
+    height: 50px;
+    background-color: blue;
+    border-radius: 10px 20px 30px 40px;
+}
