--- a/style.css
+++ b/style.css
@@ -333,3 +333,24 @@ div.Table_styling{
     background-color: blue;
     border-radius: 10px 20px 30px 40px;
 }
+
+/*Границы*/
+.border div{
+    width: 100px;
+    height: 100px;
+    /*border-style: solid;*/
+    border-color: red;
+    border-width: 3px;
+    padding: 10px;
+    border-radius: 5px;
+}
+.border p{margin: 28%;}
+.solid{border-style: solid;}
+.dashed{border-style: dashed;}
+.dotted{border-style: dotted;}
+.double{border-style: double;}
+.inset{border-style: inset;}
+.outset{border-style: outset;}
+.ridge{border-style: ridge;}
+.groove{border-style: groove}
+
