--- a/style.css
+++ b/style.css
@@ -382,3 +382,44 @@ div.outer2{
     box-sizing: border-box;
 
 }
+
+/*Фон элемента*/
+/*.Element_background div{*/
+/*    width: 250px;*/
+/*    height: 200px;*/
+/*    margin: 10px;*/
+/*    padding: 10px;*/
+/*    border-radius: 15px;*/
+/*}*/
+
+.colored{
+    background-color: #ff0507;
+    width: 250px;
+    height: 200px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+}
+.imaged{
+    background-image: url("https://images.drive.ru/i/0/5f6c5369ec05c4fe2700000f.jpg");
+    /*background-repeat: round;*/
+    color: #ff0507;
+    background-size: 100% 100%;
+    width: 250px;
+    height: 200px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+}
+.Image_position{
+    width: 300px;
+    height: 250px;
+    margin: 10px;
+
+    border: 1px solid #ccc;
+    background-color: #eee;
+    background-image: url("image/Tesla.jpg");
+    background-repeat: no-repeat;
+    background-position: top right;
+    color: #cccccc;
+}
