--- a/style.css
+++ b/style.css
@@ -474,3 +474,16 @@ div.outer2{
     box-shadow: 10px 4px 10px 3px #888, 11px 5px 10px -3px red;
 
 }
+
+/*Контуры элементов*/
+.outline div{
+    width: 182px;
+    height: 96px;
+    margin: 20px;
+    border: 5px solid #cccccc;
+    border-radius: 5px;
+    background-color: #eeeeee;
+    outline-color: red;
+    outline-style: dashed;
+    outline-width: 2px;
+}
