--- a/style.css
+++ b/style.css
@@ -487,3 +487,52 @@ div.outer2{
     outline-style: dashed;
     outline-width: 2px;
 }
+
+/*Обтекание элементов*/
+div.float {
+    border: solid 2px black;
+    padding: 10px;
+    border-radius: 10px;
+
+}
+.image{
+    float: left;
+    margin: 10px;
+    margin-top: 0px;
+}
+.sidebar{
+    border: 2px solid #ccc;
+    background-color: #eeeeee;
+    width: 150px;
+    padding: 10px;
+    margin-left: 10px;
+    font-size: 20px;
+    float: right;
+}
+.image2{
+    float: left;
+    margin:10px;
+    margin-top:0px;
+}
+.footer{
+    border-top: 1px solid #ccc;
+    clear: both;
+}
+
+/*Прокрутка элементов*/
+.article1{
+    width: 300px;
+    height: 150px;
+    margin: 15px;
+    padding: 2px;
+    border: 1px solid #ccc;
+    overflow: auto;
+}
+.article2{
+    width: 300px;
+    height: 150px;
+    margin: 15px;
+    padding: 2px;
+    border: 1px solid #ccc;
+    overflow: hidden;
+}
