--- a/style.css
+++ b/style.css
@@ -601,3 +601,21 @@ div.float {
     text-align: center;
     color:white;
 }
+
+/*Радиальный градиент*/
+.radial_gradient div{
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+
+    background-color: #eee;
+    background-image: radial-gradient(25% 30%, circle, white, black);
+    background-image: -moz-radial-gradient(25% 30%, circle, white, black);
+    background-image: -webkit-radial-gradient(25% 30%, circle, white, black);
+}
+.radial_gradient p{
+    margin: 0;
+    padding-top: 60px;
+    text-align: center;
+    color: #eee;
+}
